// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Movement test suite should generate a basic movement 1`] = `
Object {
  "events": Array [
    Object {
      "key": "D",
      "position": "VI",
      "root": "Bb",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "VI",
      "root": "Bb",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "III",
      "root": "F",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "VI",
      "root": "Bb",
      "scaleName": "Lydian",
      "type": "mode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1920,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 0,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 1920,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "F",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 3840,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 5760,
    },
  ],
}
`;

exports[`A Movement test suite should generate a basic movement in 3/4 1`] = `
Object {
  "events": Array [
    Object {
      "key": "D",
      "position": "VI",
      "root": "Bb",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "VI",
      "root": "Bb",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "III",
      "root": "F",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "VI",
      "root": "Bb",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "V",
      "root": "A",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "V",
      "root": "A",
      "scaleName": "Phrygian",
      "type": "mode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 480,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 0,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 480,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "F",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 960,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 1440,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 1920,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 2400,
    },
  ],
}
`;

exports[`A Movement test suite should generate a long movement - turn rhythm 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "III",
      "root": "C#",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    Object {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "F#",
      "position": "I",
      "root": "F#",
      "scaleName": "Lydian",
      "type": "key",
    },
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Lydian",
      "type": "key",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 3840,
      "key": Object {
        "root": "C#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 0,
    },
    Object {
      "dur": 3840,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 3840,
    },
    Object {
      "dur": 3840,
      "key": Object {
        "root": "F#",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 7680,
    },
    Object {
      "dur": 3840,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 11520,
    },
  ],
}
`;

exports[`A Movement test suite should generate a simple movement - euclidean 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "III",
      "root": "C#",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    Object {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "A",
      "position": "VI",
      "root": "F#",
      "scaleName": "Aeolian",
      "type": "mode",
    },
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "A",
      "position": "III",
      "root": "C#",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    Object {
      "key": "F#",
      "position": "I",
      "root": "F#",
      "scaleName": "Phrygian",
      "type": "key",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1440,
      "key": Object {
        "root": "C#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 0,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 1440,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "F#",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 2880,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 3840,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "C#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 5280,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "F#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 6720,
    },
  ],
}
`;

exports[`A Movement test suite should generate a simple movement - turn rhythm 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "VI",
      "root": "F#",
      "scaleName": "Aeolian",
      "type": "mode",
    },
    Object {
      "key": "A",
      "position": "III",
      "root": "C#",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    Object {
      "key": "A",
      "position": "VI",
      "root": "F#",
      "scaleName": "Aeolian",
      "type": "mode",
    },
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Aeolian",
      "type": "key",
    },
    Object {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "Dorian",
      "type": "mode",
    },
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Dorian",
      "type": "key",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1280,
      "key": Object {
        "root": "F#",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 0,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "C#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 1280,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "F#",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 2720,
    },
    Object {
      "dur": 1280,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 4160,
    },
    Object {
      "dur": 1280,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 5440,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 6720,
    },
  ],
}
`;
